--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
+# Pycharm files
+.idea
+
+# Fetched data
+*.csv
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
 
 # C extensions
 *.so
